fixed overlapping divs

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -49,9 +49,9 @@ a {
   margin: 20px auto;
 }
 
-.feature {
-  height: 480px;
-}
+// .feature {
+//   height: 480px;
+// }
 
 
 .contact {
@@ -66,8 +66,8 @@ a {
   display: none;
 }
 
-.shape-block {
-  display: block;
-  height: 100%;
-  float: clear;
-}
+// .shape-block {
+//   display: block;
+//   height: 100%;
+//   float: clear;
+// }
